# Navaduel

./: .gitignore  CMakeLists.txt  COPYING  LICENSE  Makefile  README.md  README_deliver.md  build.sh  compile.bat  config.ini  install.bat  install.sh  navaduel  run.bat  spec.txt  uninstall.sh
include/: input.h  screens.h  state.h  util.h
include/screens/: game.h  main_screen.h
resources/: ref
resources/models/: cannon.blend  cannon.blend1  cannon.glb  cannon_rail.glb  cannon_stand.glb  low poly palm tree.blend  palm_tree.blend  palm_tree.glb  ship1edited.blend  ship1edited.glb  ship2.glb  ship2edited.blend  ship2edited.blend1  ship2edited.glb
resources/sprites/: sky.kra  splash_sheet.png.kra  splashgif.kra  splashgif.kra~  water.png.kra  water_anim.apng
src/: anim.c  anim.h  game.c  game.h  main.c  obstacles.c  obstacles.h  screens.c  screens.h  settings.h  ship.c  ship.h  util.c  util.h
